Implemented move data to user
