# server/app/src/main/java/com/epicnerf/api/GroupApiDelegateImpl.java
@@ -7,7 +7,7 @@ import com.epicnerf.hibernate.model.GroupInvite;
 import com.epicnerf.hibernate.model.GroupObject;
 import com.epicnerf.hibernate.model.ImageData;
 import com.epicnerf.hibernate.model.User;
-import com.epicnerf.hibernate.repository.FinanceRepository;
+import com.epicnerf.hibernate.repository.FinanceEntryRepository;
 import com.epicnerf.hibernate.repository.GroupInviteRepository;
 import com.epicnerf.hibernate.repository.GroupObjectRepository;
 import com.epicnerf.hibernate.repository.UserRepository;
@@ -55,7 +55,7 @@ public class GroupApiDelegateImpl implements GroupApiDelegate {
     private MapToHibernateModel mapper;
 
     @Autowired
-    private FinanceRepository financeRepository;
+    private FinanceEntryRepository financeEntryRepository;
 
     @Autowired
     private FinanceEntryDao financeEntryDao;
@@ -68,6 +68,8 @@ public class GroupApiDelegateImpl implements GroupApiDelegate {
 
     @Autowired
     private NotificationManager notificationManager;
+    @Autowired
+    private ChoreDao choreDao;
 
     public ResponseEntity<List<Group>> groupGet(Integer num, Integer lastId) {
         User user = apiSupport.getCurrentUser();
@@ -114,7 +116,7 @@ public class GroupApiDelegateImpl implements GroupApiDelegate {
             com.epicnerf.hibernate.model.FinanceEntry f = mapper.mapFinance(financeEntry, false);
             f.setCreatedBy(user);
             f.setGroup(group.get());
-            financeRepository.save(f);
+            financeEntryRepository.save(f);
             notificationManager.onFinanceEntryAdded(f);
 
             return ResponseEntity.ok(openApiMapper.map(f));
@@ -186,6 +188,25 @@ public class GroupApiDelegateImpl implements GroupApiDelegate {
         }
 
         throw new NoResultException();
+    }
+
+    public ResponseEntity<Void> groupGroupIdMoveUserDataPut(Integer groupId, MoveUserData moveUserData) {
+        User user = apiSupport.getCurrentUser();
+        Optional<GroupObject> group = groupObjectRepository.findById(groupId);
+
+        if (group.isPresent() && group.get().getOwner().getId().equals(user.getId())) {
+            apiSupport.validateUserIsInGroup(group.get(), moveUserData.getToUserId());
+            if (moveUserData.getChores()) {
+                choreDao.moveChoresToUser(group.get().getId(), moveUserData.getFromUserId(), moveUserData.getToUserId());
+            }
+            if (moveUserData.getFinance()) {
+                financeEntryDao.moveFinanceToUser(group.get().getId(), moveUserData.getFromUserId(), moveUserData.getToUserId());
+            }
+
+            return new ResponseEntity<>(HttpStatus.OK);
+        }
+        throw new NoResultException();
+
     }
 
     public boolean userIsInGroup(GroupObject group, Integer userId) {
