# server/app/src/main/java/com/epicnerf/hibernate/dao/FinanceEntryDao.java
@@ -1,7 +1,9 @@
 package com.epicnerf.hibernate.dao;
 
 import com.epicnerf.hibernate.model.FinanceEntry;
+import com.epicnerf.hibernate.model.FinanceEntryEntry;
 import com.epicnerf.hibernate.model.GroupObject;
+import com.epicnerf.hibernate.repository.FinanceEntryRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -15,6 +17,8 @@ public class FinanceEntryDao {
 
     @Autowired
     private EntityManager entityManager;
+    @Autowired
+    private FinanceEntryRepository financeEntryRepository;
 
     @Transactional
     public void deleteAllFinanceEntries(GroupObject group) {
@@ -40,6 +44,70 @@ public class FinanceEntryDao {
         entityManager
                 .createNativeQuery(q)
                 .executeUpdate();
+    }
+
+    @Transactional
+    public void moveFinanceToUser(int groupId, int fromUserId, int toUserId) {
+        distributeRedundantEntries(toUserId);
+
+        String query = "update finance_entry  join finance_entry_entries on finance_entry_entries.finance_entry_id = finance_entry.id ";
+        query += "join finance_entry_entry on finance_entry_entries.entries_id = finance_entry_entry.id ";
+        query += "set finance_entry_entry.spent_for_id = :toUserId ";
+        query += "where finance_entry.group_id = :groupId and finance_entry_entry.spent_for_id = :fromUserId";
+        entityManager
+                .createNativeQuery(query)
+                .setParameter("groupId", groupId)
+                .setParameter("fromUserId", fromUserId)
+                .setParameter("toUserId", toUserId)
+                .executeUpdate();
+
+        entityManager
+                .createNativeQuery("update finance_entry set spent_from_id = :toUserId where group_id = :groupId and spent_from_id = :fromUserId")
+                .setParameter("groupId", groupId)
+                .setParameter("fromUserId", fromUserId)
+                .setParameter("toUserId", toUserId)
+                .executeUpdate();
+
+        entityManager
+                .createNativeQuery("update finance_entry set created_by_id = :toUserId where group_id = :groupId and created_by_id = :fromUserId")
+                .setParameter("groupId", groupId)
+                .setParameter("fromUserId", fromUserId)
+                .setParameter("toUserId", toUserId)
+                .executeUpdate();
+    }
+
+    private void distributeRedundantEntries(int toUserId) {
+        //noinspection unchecked
+        List<Integer> redundantEntryIds = (List<Integer>) entityManager
+                .createNativeQuery("select id from finance_entry_entry where spent_for_id = :toUserId")
+                .setParameter("toUserId", toUserId)
+                .getResultList();
+        redundantEntryIds.forEach(this::fixRedundantEntry);
+    }
+
+    private void fixRedundantEntry(int redundantEntryId) {
+        String query = "select finance_entry_id from finance_entry_entries where finance_entry_entries.entries_id = :entryId";
+
+        Integer financeId = (Integer) entityManager
+                .createNativeQuery(query)
+                .setParameter("entryId", redundantEntryId)
+                .getSingleResult();
+
+        FinanceEntry entry = financeEntryRepository.findById(financeId).orElse(null);
+
+
+        assert entry != null;
+        FinanceEntryEntry redundantEntry = entry.getEntries().stream()
+                .filter(e -> e.getId().equals(redundantEntryId))
+                .findAny()
+                .orElse(null);
+
+        assert redundantEntry != null;
+        float addToOther = redundantEntry.getAmount() / (entry.getEntries().size() - 1);
+        entry.getEntries().forEach(e -> e.setAmount(e.getAmount() + addToOther));
+        entry.getEntries().remove(redundantEntry);
+
+        financeEntryRepository.save(entry);
     }
 
     public List<FinanceEntry> paginateFinanceEntries(GroupObject group, int limit, Integer lastId) {
